# RemindR

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.sh  shell_integration.sh
.cursor/rules/: stack.mdc
examples/: basic_usage.rs
remindr/: Cargo.toml
src/: lib.rs  main.rs
src/ai/: mod.rs
src/cli/: commands.rs  display.rs  mod.rs
src/daemon/: mod.rs  process.rs  watcher.rs
src/db/: mod.rs  pool.rs  schema.rs
src/models/: mod.rs
src/utils/: logging.rs
tests/: basic_tests.rs
