[package]
name = "remindr"
version = "0.1.0"
edition = "2021"
authors = ["RemindR Team"]
description = "A Rust-based command historization and categorization app"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Daemon management
daemonize = "0.5"

# Database management
rusqlite = { version = "0.29", features = ["bundled", "functions"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Logging and error handling
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# For shell command monitoring
notify = "6.1"
dirs = "5.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NLP/AI integration (lightweight)
rust-bert = { version = "0.21", optional = true }

# Process management (Unix)
nix = "0.26"

# Terminal utilities
term_size = "0.3"

[dev-dependencies]
tempfile = "3.8"

[features]
ai-categorization = ["rust-bert"]
default = []

[[bin]]
name = "hist"
path = "src/main.rs"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "save_command"
path = "src/bin/save_command.rs"

[[bin]]
name = "shell_integration"
path = "src/bin/shell_integration.rs"

[[bin]]
name = "integration_manager"
path = "src/bin/integration_manager.rs"

[lib]
name = "remindr"
path = "src/lib.rs" 